--- a/package.json
+++ b/package.json
@@ -1,31 +1,4 @@
 {
-  "devDependencies": {
-    "archiver": "^0.14.3",
-    "browser-sync": "^2.9.11",
-    "browserify-shim": "^3.8.11",
-    "del": "^1.1.1",
-    "glob": "^5.0.5",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-browserify": "^0.5.1",
-    "gulp-header": "^1.2.2",
-    "gulp-jasmine": "^2.1.0",
-    "gulp-jscs": "^1.5.1",
-    "gulp-jshint": "^1.9.2",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-rename": "^1.2.0",
-    "gulp-replace": "^0.5.3",
-    "gulp-size": "^2.0.0",
-    "gulp-uglify": "^1.4.2",
-    "gulp-util": "^3.0.7",
-    "jasmine-jquery": "^2.1.0",
-    "jshint-stylish": "^1.0.1",
-    "psi": "^1.0.6",
-    "run-sequence": "^1.0.2"
-  },
   "engines": {
     "node": ">=0.10.0"
   },
@@ -54,7 +27,27 @@
     "jquery": "^2.1.4",
     "knockout": "^3.3.0",
     "knockout-mapping": "^2.5.0",
-    "normalize.css": "^3.0.3",
-    "watchify": "^3.6.0"
+    "normalize.css": "^3.0.3"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.9.12",
+    "del": "^2.0.2",
+    "gulp": "^3.9.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-gzip": "^1.2.0",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jshint": "^1.12.0",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-size": "^2.0.0",
+    "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.7",
+    "jshint-stylish": "^2.0.1",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.4",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
