--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-useref": "^2.1.0",
     "gulp-util": "^3.0.7",
     "jshint-stylish": "^2.0.1",
+    "lazypipe": "^1.0.1",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.4",
     "vinyl-buffer": "^1.0.0",
