--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
   },
   "devDependencies": {
     "browser-sync": "^2.9.12",
+    "chai": "^3.4.1",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-browserify": "^0.5.1",
     "gulp-gzip": "^1.2.0",
     "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^1.12.0",
+    "gulp-karma": "0.0.5",
     "gulp-load-plugins": "^1.1.0",
     "gulp-minify-css": "^1.2.1",
+    "gulp-mocha": "^2.1.3",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.0.0",
@@ -47,9 +50,18 @@
     "gulp-useref": "^2.1.0",
     "gulp-util": "^3.0.7",
     "jshint-stylish": "^2.0.1",
+    "karma": "^0.13.15",
+    "karma-browserify": "^4.4.0",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-mocha": "^0.2.0",
+    "karma-spec-reporter": "0.0.22",
     "lazypipe": "^1.0.1",
+    "mocha": "^2.3.3",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.4",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
