--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   "version": "0.0.1",
   "dependencies": {
     "bootstrap": "^3.3.5",
+    "firebase": "^2.3.1",
     "jquery": "^2.1.4",
-    "knockout": "^3.3.0",
+    "knockout": "^3.4.0",
     "knockout-mapping": "^2.5.0",
     "normalize.css": "^3.0.3"
   },
