--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.9.12",
+    "browserify": "^13.0.0",
     "chai": "^3.4.1",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
