--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "name": "cooperstown",
   "private": true,
   "scripts": {
-    "build": "gulp build",
-    "watch": "watchify index.js -o bundle.js --debug --verbose"
+    "build": "gulp",
   },
   "version": "0.0.1",
   "dependencies": {
