--- a/package.json
+++ b/package.json
@@ -27,17 +27,18 @@
     "knockout": "^3.4.0",
     "knockout-mapping": "^2.6.0",
     "knockout-postbox": "^0.5.2",
-    "normalize.css": "^3.0.3"
+    "normalize.css": "^3.0.3",
+    "oauth-signature": "^1.3.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.9.12",
+    "browser-sync": "^2.12.5",
     "del": "^2.0.2",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.6",
     "gulp-if": "^2.0.0",
     "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^1.12.0",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-minify-css": "^1.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.0.0",
